--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Bruno Diniz <ferreiradiniz@msn.com>",
   "license": "MIT",
   "devDependencies": {
+    "lint-staged": "^10.5.3",
     "standard": "^16.0.3"
   }
 }
