--- a/package.json
+++ b/package.json
@@ -5,8 +5,21 @@
   "repository": "git@github.com:ferreiradiniz/js_funcional.git",
   "author": "Bruno Diniz <ferreiradiniz@msn.com>",
   "license": "MIT",
+  "lint-staged": {
+    "*.js": "standard --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "devDependencies": {
+    "husky": "^4.3.6",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "standard": "^16.0.3"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
