--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     ]
   },
   "lint-staged": {
-    "*.js": "standard --fix"
+    "*.js": ["standard --fix", "yarn test:staged"]
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "yarn test:ci"
     }
+  },
+  "jest":{
+    "collectCoverage": true
   },
   "devDependencies": {
     "husky": "^4.3.6",
@@ -25,6 +29,10 @@
     "standard": "^16.0.3"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --colors --silent --noStackTrace --passWithNoTests",
+    "test:unit": "yarn test -- --watch ",
+    "test:staged": "yarn test -- --findRelatedTests",
+    "test:ci": "yarn test -- --coverage "
+    
   }
 }
